# veloxx

./: .gitignore  ADVANCED_IO_ANALYSIS.md  AGENTS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCS_DEPLOYMENT.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMMEDIATE_GOALS.md  ISSUES.md  LOCAL_CI.md  PACKAGE_UPDATES_SUMMARY.md  PYTHON_BUILD_FIX.md  README.md  README_PYTHON.md  README_WASM.md  Roadmap.md  Roadmap_Audit.md  WORKFLOW_FIX_STRATEGY.md  WORKFLOW_SIMPLIFICATION.md  audit.toml  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  debug_veloxx_import.py  example.py  inspect_veloxx.py  local-ci.bat  npm-package.json  package-lock.json  package.json  pyproject.toml  requirements.txt  temp_inspect_veloxx.py  test.json  test_veloxx.py  test_wasm.js  typedoc.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  code_quality.yml  docs-deploy.yml  docs.yml  release.yml
benches/: arrow_aggregate_benchmarks.rs  arrow_math_benchmarks.rs  arrow_series_comparison.rs  comprehensive_benchmarks.rs  comprehensive_final_benchmark.rs  core_operations_bench.rs  csv_read_bench.rs  groupby_sum_bench.rs  io_benchmarks.rs  join_bench.rs  json_io_bench.rs  my_benchmark.rs  parallel_group_by_benchmark.rs  parquet_benchmarks.rs  performance_benchmarks.rs  tpch_benchmarks.rs  window_ranking_bench.rs
bindings/python/: mod.rs
bindings/wasm/: mod.rs
docs/: API_GUIDE.md  AUDIT_REPORT.md  FEATURE_PARITY.md  GETTING_STARTED.md  PERFORMANCE_OPTIMIZATIONS.md  index.md
docs-site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-site/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
docs-site/docs/: intro.md
docs/js/: hierarchy.html  index.html
examples/: advanced_io.rs  arrow_performance_test.rs  basic_dataframe_operations.rs  customer_purchase_analysis.rs  data_quality_validation.rs  data_visualization.rs  dataframe_aggregation_and_stats.rs  dataframe_manipulation.rs  machine_learning.rs  performance_optimization.rs  temp_inspect_veloxx_lib.py  time_series_analysis.rs  window_functions_analytics.rs
pkg/: .gitignore  README.md  babel.config.cjs  package.json  veloxx.js  veloxx_bg.js  veloxx_bg.wasm  veloxx_bg.wasm.d.ts
scripts/: fix_bench_tests.py  fix_clippy.py  fix_clippy_v2.py  fix_clippy_v3.py  fix_python_syntax.py  fix_remaining_benchmarks.py
src/: advanced_io.rs  audit.rs  conditions.rs  data_quality.rs  distributed.rs  error.rs  expression.rs  expressions.rs  io.rs  lazy.rs  lib.rs  lib_backup.rs  lib_fixed.rs  ml.rs  python_bindings.rs  series.rs  types.rs  visualization.rs  wasm_bindings.rs  window_functions.rs
src/dataframe/: cleaning.rs  display.rs  group_by.rs  io.rs  join.rs  manipulation.rs  mod.rs  pivot.rs  sources.rs  tests.rs  time_series.rs
src/io/: arrow.rs  csv.rs  json.rs  mmap_csv.rs  mod.rs
src/lazy/: optimizer.rs
src/performance/: arrow_simd.rs  expression_fusion.rs  fast_groupby.rs  memory.rs  memory_pool.rs  mod.rs  optimized_simd.rs  parallel.rs  parallel_group_by.rs  series_ext.rs  simd.rs  (+4 more)
tests/: advanced_io_test.rs  arrow_aggregate_test.rs  arrow_dataframe_test.rs  arrow_filter_test.rs  arrow_math_test.rs  arrow_string_test.rs  audit_test.rs  conditions_test.rs  data_quality.rs  dataframe_integration.rs  dataframe_select_test.rs  dataframe_test.rs  distributed_test.rs  drop_nulls_test.rs  e2e_workflow_test.rs  error_test.rs  expression_test.rs  expressions_test.rs  fuzz_tests.proptest-regressions  fuzz_tests.rs  high_performance_test.rs  io_test.rs  join_test.rs  lazy_test.rs  ml_test.rs  outer_join_test.rs  performance_test.rs  pivot_test.rs  test_conditions.rs  types_test.rs  visualization_test.rs  wasm-real.test.js  window_functions_test.rs
(+43 files in other folders)
