[package]
name = "veloxx"
version = "0.2.0"
edition = "2024"
description = "Veloxx: A high-performance, lightweight Rust library for in-memory data processing and analytics. Featuring DataFrames, Series, CSV/JSON I/O, powerful transformations, aggregations, and statistical functions for efficient data science and engineering."
license = "MIT"
authors = ["Wali Mohammad Kadri"]
homepage = "https://github.com/Conqxeror/veloxx"
repository = "https://github.com/Conqxeror/veloxx"
keywords = ["dataframe", "data-processing", "analytics", "high-performance", "lightweight"]
categories = ["data-structures", "science", "parsing", "api-bindings"]

[lib]
path = "src/lib.rs"

[dependencies]
csv-core = "0.1"
microjson = "0.1.6"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = false



