[package]
name = "veloxx"
version = "0.2.2"
edition = "2024"
description = "Veloxx: A high-performance, lightweight Rust library for in-memory data processing and analytics. Featuring DataFrames, Series, CSV/JSON I/O, powerful transformations, aggregations, and statistical functions for efficient data science and engineering."
license = "MIT"
authors = ["Wali Mohammad Kadri"]
homepage = "https://github.com/Conqxeror/veloxx"
repository = "https://github.com/Conqxeror/veloxx"
keywords = ["dataframe", "data-processing", "analytics", "high-performance", "lightweight"]
categories = ["data-structures", "science", "parsing", "api-bindings"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
csv-core = "0.1.10"
microjson = "0.1.6"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
pyo3 = { version = "0.21.2", optional = true, features = ["extension-module"] }
thiserror = "1.0"
bincode = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }

[[example]]
name = "basic_dataframe_operations"
path = "examples/basic_dataframe_operations.rs"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = false

[features]
python = ["pyo3"]
wasm = ["wasm-bindgen", "js-sys"]





