[workspace]
resolver = "2"

[workspace.lints.clippy]
uninlined_format_args = "allow"

[package]
name = "veloxx"
version = "0.2.4"
edition = "2021"
authors = ["Conqxeror <conqxeror@gmail.com>"]
description = "A lightweight Rust library for in-memory data processing and analytics"
repository = "https://github.com/Conqxeror/veloxx"
license = "MIT"
keywords = ["data", "analytics", "dataframe", "series", "statistics"]
categories = ["data-structures", "science"]
readme = "README.md"

[lib]
name = "veloxx"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3"]
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
csv-core = "0.1.12"
microjson = "0.1.6"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
pyo3 = { version = "0.24.1", optional = true, features = ["extension-module"] }
thiserror = "1.0"
bincode = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
rayon = "1.8"
num-traits = "0.2"

[lints]
workspace = true

[[example]]
name = "basic_dataframe_operations"
path = "examples/basic_dataframe_operations.rs"

[[example]]
name = "dataframe_manipulation"
path = "examples/dataframe_manipulation.rs"

[[example]]
name = "dataframe_aggregation_and_stats"
path = "examples/dataframe_aggregation_and_stats.rs"
[[example]]
name = "time_series_analysis"
path = "examples/time_series_analysis.rs"

[[example]]
name = "performance_optimization"
path = "examples/performance_optimization.rs"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = false

[package.metadata.maturin]
name = "veloxx"